<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewEnd"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:background="@color/bg_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="730dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UselessParent"
        tools:layout_editor_absoluteX="-4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:fontFamily="casual"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sal_bruto_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salario_bruto"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/real" />

                <EditText
                    android:id="@+id/sal_bruto_input"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="no"
                    android:ems="10"
                    android:hint="0,00"
                    android:inputType="numberDecimal"
                    android:isScrollContainer="false"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dependentes_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Número Dependentes"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/dependentes_input"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:isScrollContainer="false"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outros_descontos"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/real"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/descontos_input"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="0,00"
                    android:inputType="numberDecimal"
                    android:isScrollContainer="false"
                    android:singleLine="true"
                    android:importantForAutofill="no" />

            </LinearLayout>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingVertical="20dp"
                android:paddingHorizontal="40dp"
                android:background="@drawable/roudended_button"
                android:fontFamily="@font/comfortaa_bold"
                android:shadowColor="#615F5F"
                android:text="@string/calcular"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:onClick="calculate"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>